kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devopsproject
  labels:
    name: devops
