kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: devopsproject
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devopsproject
  template:
    metadata:
      labels:
        app: devopsproject
    spec:
      containers:
        - name: devopsproject
          image: savokostadinov/devopsproject:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
