kubernetes/databaseset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devopsproject-db
  namespace: devopsproject
spec:
  serviceName: database
  selector:
    matchLabels:
      app: devopsproject
  replicas: 1
  template:
    metadata:
      labels:
        app: devopsproject
        namespace: devopsproject
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: devopsproject
spec:
  selector:
    app: devopsproject
  ports:
    - protocol: TCP
      port: 5432
