kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devopsproject-service
  namespace: devopsproject
spec:
  selector:
    app: devopsproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
